<resources>
    <string name="app_name">TOÂ</string>
    <string name="main_intro_about_app">Researchers, doctors, scientists and designers have created this application just for TOÂ « you » in order to promote Best Practices for dealing with the Covid-19 pandemic in Africa.</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="nav_toa_contacts" translatable="false">Collectif TOÂ\n17 rue Duguay-Trouin\n75006 Paris</string>
    <string name="nav_toa_contacts_email" translatable="false">Tel: +33 0613411835\ncollectif.toa@gmail.com</string>
    <string name="privacy_policies_link" translatable="false">https://africadevs.github.io/toa/policies.html</string>
    <string name="transition_shared_main_activity_lottie_image">shared_lottie_icon</string>
    <string name="transition_splash_shared_logo">transition_shared_logo</string>
    <string name="alert_cant_handle">Error !</string>
    <string name="main_frag_prevention_btn">HOW\nTO PROTECT\nYOURSELF EVERY DAYS?</string>
    <string name="main_frag_prevention_title">How to protect myself?</string>
    <string name="prevention_toolbar_title">How to protect yourself every day?</string>
    <string name="hands_tab_why">Why ?</string>
    <string name="hands_tab_when">When ?</string>
    <string name="hands_tab_how">How ?</string>
    <string name="prevention_hands_why_content_first">Hand washing\n\nRespiratory viruses such as coronavirus disease (COVID-19) spread when mucus or droplets containing the virus enter your body through your mouth, nose, and eyes.</string>
    <string name="prevention_hands_why_content_second">Most often, this contact takes place by the hands.\n\nHands are also one of the most common ways of spreading the virus from one person to another.</string>
    <string name="prevention_hands_why_content_third">Washing a hand frequently with soap and water during a pandemic is one of the most economical, easiest and most important measures to prevent the spread of a virus.</string>
    <string name="text_expand">expand ...</string>
    <string name="text_collapse">collapse</string>
    <string name="water_tab_consumption">Water supply for human consumption</string>
    <string name="water_tab_used">Eaux usées</string>
    <string name="food_tab_aliment">Aliments à privilégier</string>
    <string name="food_tab_water">Boissons récommandées</string>
    <string name="funeral_tab_how">Comment organiser les obsèques?</string>
    <string name="prevention_water_used"><![CDATA[Le coronavirus peut être trouvé dans les fèces/urine, les eaux usées doivent donc être traitées correctement
<br/><br/>
        <b>Eaux usées domestiques:</b>
<br/>
quand c’est possible, prévoir des tranchées pour drainer les eaux usées afin qu’elles ne ruissellent pas à proximité des lieux de vie
<br/><br/>
<b>Latrines:</b>
<br/>
Utiliser la chaux active pour désinfecter des excréments (chaulage)]]>
    </string>
    <string name="prevention_water_consumption_first">Au 15-4-2020\n\nL\’OMS a confirmé qu\’il n\’y a selon les connaissances scientifiques et épidémiologiques, aucun cas de contamination en lien avec l\’eau potable. \n\n Les procédés conventionnels de désinfection en place sur les usines de potabilisation (chlore, UV, ozone) permettent ainsi d\’éliminer le virus COVID-19, tout comme les autres virus. \n\n En Afrique, l\’accès à l\’eau salubre est l\’une des conditions essentiels des gestes barrières, le lavage des mains</string>
    <string name="prevention_water_consumption_second"><![CDATA[La présence du virus dans
    l\'eau <b>non traitée</b> est possible<br/><br/>

    <strong>Pour détruire le virus dans l\’eau,
    il est recommandé</strong>
            <br /><br/>
                <b>* faire bouillir l\’eau pendant 10 minute</b><br/>
                <b>* d\’utiliser</b> du chlore pour désinfecter l\’eau destinée à la consommation humaine<br/>
                <b>*</b> Chlore (en pastilles ou SURE EAU)<br/>
                <b>*</b> maintenir un taux de chlore résiduel à 0,5 mg par Litre d\’eau<br/>
            <br/><br/>

    <strong>Attention, rester vigilant sur les dosages de chlore</strong> qui peuvent se trouver sous forme de pastille, d\’eau de javel, de DCNA, ou SURE-EAU.
]]>
    </string>
    <string name="prevention_movement_why">Evitez les foules,  Pratiquez la distanciation sociale   S\'abstenir de toute sortie non indispensable dans un lieu public. Ne participer à aucun regroupement, qu\'il soit de nature professionnelle, sociale ou familiale.\n\nEviter tout contact avec des personnes vulnérables (personnes âgées…). Eviter de fréquenter de lieux où se trouvent des personnes fragiles (hôpitaux, maternités, structures d\'hébergement pour personnes âgées...)</string>
    <string name="prevention_movement_how">"Nommer une personne plus jeune et en bonne santé de faire les courses pendant toute la période de pandémie. "</string>
    <string name="prevention_funeral_how2"><![CDATA[<b><big>Dispositif au domicile
ou au sein de la communauté</big></b><br/><br/>

La Croix Rouge locale recommande des procédure basée sur des spécificités locales
<br/><br/>
mesures de protection spécifiques aux soignants
port de combinaisons + masque + gants <br/>
désinfection par pulvérisations du logement du défunt (chaulage)<br/><br/>

<b>Combien de personnes peuvent assister aux obsèques?</b><br/><br/>

En chambre funéraire : 2 maximum<br/>
Lors de cérémonie religieuse: 20 maximum<br/> <br/>
Au cimetière : <br/>
les tombes sont numérotées,
un dispositif de géolocalisation est  mis en place afin d’associer le domicile du défunt à sa tombe. (?? en AF )<br/> <br/>
Accompagnement de la famille et des proches endeuillés
]]></string>
    <string name="prevention_funeral_how"><![CDATA[<b>CICR</b> : <a href="https://www.icrc.org/fr">voir site</a><br/>

Plans de préparation et de gestion garantissant le respect de la dignité des défunts et de leurs familles.<br/><br/>

Les mesures exceptionnelles visent à

<b>*</b> protéger  les soignants, la famille, la communauté<br/>

<b>*</b> éviter la propagation du virus<br/><br/>

Nécessité d’un dispositif respectant les spécificités des rituels ancestrales et les croyances pour la qualification d’un “Enterrement  Digne et Sécurisé “
]]>
    </string>
    <string name="prevention_food_aliments"><![CDATA[Les aliments à privilégier sont ceux qui contiennent:<br/><b>Vitamine C</b><br/>2-4 grammes/ jour<br/>pendant 10 jours<br/><b>Vitamine D</b><br/>1500-2000 UI/J<br/><b>Vitamine A</b><br/><b>Vitamine E</b><br/><b>Zinc</b><br/>30 mg par jour<br/>pendant 10 jours<br/>à jeun à distance des repas.<br/><br/>Aliments riches en
<b>Vitamines</b> et <b>Zinc</b> recommandés pour lutter contre le Covid19 ]]></string>
    <string name="main_diagnosis_toolbar_title">ANALYZSEZ VOS SYMPTOMES</string>
    <string name="main_diagnosis_title">ANALYZSEZ\nVOS SYMPTOMES</string>
    <string name="diagnosis_subtitle">recevez aussitôt des informations adaptées sur ce qu\’il est préférable de faire</string>
    <string name="btn_next_spaced">S U I V A N T</string>
    <string name="btn_next_no_choice">AUCUN SYMPTOME</string>
    <string name="diagnosis_continue_analysis">Continuer à analyser vos symptômes</string>
    <string name="snack_check_one_case">Veuillez cocher une case pour continuer</string>
    <string name="diagnosis_fourth_test_negative_depth3_question">Avez-vous au moins 3 des symptômes suivants ?</string>
    <string name="diagnosis_fourth_test_negative_depth2_question">Avez-vous au moins un des symptômes suivants ?</string>
    <string name="diagnosis_none_of_symptoms">Non, j\'ai aucun de ces symptômes</string>
    <string name="diagnosis_none_of_diseases">Non, Aucune</string>
    <string name="diagnosis_result_negatif">Votre diagnostic est négatif</string>
    <string name="diagnisis_result_toolbar_title">VOTRE RÉSULTAT</string>
    <string name="diagnosis_result_positive_btn_prevention">J’aide mon organisme à se défendre contre la maladie</string>
    <string name="diagosis_result_positive_advice">Pensez à protéger vos proches et concitoyens en observant les mésures barrières</string>
    <string name="diagnosis_prevention_cotinuation">Comment continuer à me protéger?</string>
    <string name="diagnosis_result_positive">Consultez immédiatement un médecin ou un centre de soin Covid-19 le plus proche. Ou téléphonez au numéro dédié pour le Covid 19.</string>
    <string name="diagnosis_btn_none_symptoms">Non, j\'ai aucun de ces symptômes</string>
    <string name="diagnosis_restart">Récommencer le diagnostic</string>
    <string name="diagnosis_result_negative_warning">Ne baissez pas la garde aussi longtemps que la pandémie est active dans le Pays où vous êtes</string>
    <string name="diagnosis_check_cases">(cocher la ou les cases)</string>
    <string name="diagnosis_no_respiratory_difficulties">Non, je n’ai pas des difficultés à respirer</string>
    <string name="diagnosis_respiratory_difficulties">Oui, j’ai des difficultés à respirer</string>
    <string name="diagnosis_ten_days_trip">Avez-vous, dans les 10 jours suivants des symptômes d’une grippe, des difficultés respiratoires, une impression de la poitrine qui serre, une impression de ne pas pouvoir respirer profondément ?</string>
    <string name="diagnosis_result_positive_restart">Récommencer mon diagnostic COVID-19</string>
    <string name="main_publishing_authors">Nom des responsables de publication</string>
    <string name="diagnosis_one_or_more_symptoms_question">Avez-vous un ou plusieurs des symptômes suivants ? (cocher la ou les cases). recevez aussitôt des informations adaptées sur ce qu’il est préférable de faire</string>
    <string name="diagnosis_malaria_text">Vous avez un ou plusieurs symptômes du paludisme, il est nécessaire que vous consultiez un médecin qui pourra vous faire un test et vous donner les médicaments adéquats. \n\nSi vous avez déjà consulté et effectué ce test du paludisme et qu’il s’est révélé négatif alors cliquez sur le bouton ci-dessous.</string>
    <string name="diagnosis_disease_question">Souffrez-vous d’une des maladies reconnues suivantes ?</string>
    <string name="diagnosis_disease_top_hint">Indiquez et recevez aussitôt des informations adaptées sur ce qu’il est préférable de faire</string>
    <string name="diagnosis_btn_test_protect_others">Comment protéger les autres?</string>
    <string name="diagnosis_test_positive_result_question">Vous avez effectué un test de Covid-19 et il est positif?</string>
    <string name="diagnosis_test_positive_yes">Oui, j’ai eu un test positif au COVID-19</string>
    <string name="diagnosis_test_positive_no">Non, je n’ai pas eu de test positif au Covid-19</string>
    <string name="about_policies_btn_text">politique de confidentialité</string>
    <string name="member_1" translatable="false">Karima Brahimi</string>
    <string name="member_2" translatable="false">Paul Tossa</string>
    <string name="member_3" translatable="false">Armelle Hebert</string>
    <string name="member_4" translatable="false">Manon Aminatou</string>
    <string name="member_5" translatable="false">Nyan Frederick Goumou</string>
    <string name="member_6" translatable="false">Sandrine Mansoutre</string>
    <string name="member_7" translatable="false">Clémentine Langlois</string>
    <string name="member_8" translatable="false">Steve Ndende</string>
    <string name="member_1_intro">Médecin, microbiologiste</string>
    <string name="member_2_intro">Médecin toxicologue et de santé publique</string>
    <string name="member_3_intro">Expert en Santé Environnementale Renforcement des capacités Pays / Politiques publiques, Immunologiste</string>
    <string name="member_4_intro">Dr en Pharmacologie, Toxicologue, Directrice VisaTox</string>
    <string name="member_5_intro">Médecin, chirurgien oncologue pédiatre et consultant en PCI</string>
</resources>