<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layouts_main_white_bg">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolabar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/layouts_main_white_bg"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="center_horizontal|top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/toolbar_api_version_top_margin"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title=" ">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="monospace"
                    android:text="@string/main_diagnosis_toolbar_title"
                    android:textSize="@dimen/tootlar_custom_title_text_size"
                    android:visibility="visible"
                    app:layout_collapseMode="pin" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="@dimen/value_8dp"
        android:background="@color/layouts_main_white_bg"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/value_6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="@dimen/value_4dp"
            app:cardCornerRadius="@dimen/main_cards_radius"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <org.changemakers.toa.custom_views.ExpandableTextLayout
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="#F3EFEF"
                    android:paddingLeft="8dp"
                    android:paddingTop="10dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    app:ExpandableMaxLines="2">

                    <TextView
                        android:id="@+id/expandable_id_show_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:scrollHorizontally="false"
                        android:text="@string/diagnosis_one_or_more_symptoms_question"
                        android:textColor="@color/prevention_details_text_color"
                        android:textSize="@dimen/app_main_text_size" />

                    <TextView
                        android:id="@+id/expandable_id_more_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingEnd="25dp"
                        android:paddingRight="25dp"
                        android:paddingBottom="5dp"
                        android:text="@string/text_expand"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/app_main_text_size" />
                </org.changemakers.toa.custom_views.ExpandableTextLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/value_4dp"
            android:layout_marginBottom="@dimen/value_6dp"
            android:layout_weight="1"
            android:background="@color/layouts_main_white_bg"
            android:clipToPadding="false"
            android:paddingTop="5dp"
            android:paddingBottom="?actionBarSize" />

        <RelativeLayout
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/shape_btn_next_red"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/btn_next_spaced"
                android:textColor="@color/materialRedLight"
                android:textSize="16sp"
                app:autoSizeTextType="uniform" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_no_syptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginRight="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/shape_btn_next_primary"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/btn_next_no_choice"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:autoSizeTextType="uniform" />
        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>