<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layouts_main_white_bg">

    <include
        android:id="@+id/appBar"
        layout="@layout/include_diagnosis_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="@dimen/value_8dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="12dp"
        android:background="@color/layouts_main_white_bg"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/value_6dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="@dimen/value_4dp"
            app:cardCornerRadius="@dimen/main_cards_radius"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_diagnosis_old_time_rounded_bg"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">


                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4dp"
                    android:layout_marginBottom="@dimen/value_4dp"
                    android:gravity="center"
                    android:text="@string/diagnosis_disease_question" />

                <TextView
                    android:id="@+id/expandable_id_show_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:scrollHorizontally="false"
                    android:text="@string/diagnosis_disease_top_hint"
                    android:textColor="@color/prevention_details_text_color" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/value_4dp"
            android:layout_marginBottom="@dimen/value_6dp"
            android:layout_weight="1"
            android:background="@color/layouts_main_white_bg"
            android:clipToPadding="false"
            android:paddingTop="5dp" />

        <RelativeLayout
            android:id="@+id/btn_no_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginRight="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/shape_btn_next_red"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/diagnosis_none_of_diseases"
                android:textColor="@color/materialRedLight"
                android:textSize="16sp"
                app:autoSizeTextType="uniform" />
        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>