<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layouts_main_white_bg">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolabar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/layouts_main_white_bg"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="center_horizontal|top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/toolbar_api_version_top_margin"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title=" ">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="monospace"
                    android:text="@string/diagnisis_result_toolbar_title"
                    android:textSize="@dimen/tootlar_custom_title_text_size"
                    android:visibility="visible"
                    app:layout_collapseMode="pin" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/result_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/covid_worms_bg" />

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/covid_worms_bg" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ce132845" />
    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/value_5dp"
                android:paddingBottom="@dimen/value_10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diagnosis_shape_bg_red_rounded"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/value_10dp"
                        android:paddingBottom="@dimen/value_10dp"
                        android:text="@string/diagnosis_result_positive"
                        android:textColor="@color/white" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/btn_fourth_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_12dp"
                    android:layout_marginBottom="@dimen/value_12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/shape_btn_next_white"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/diagnosis_result_positive_restart"
                        android:textColor="@color/white"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_fourth_prevention"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/shape_btn_next_white"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/diagnosis_result_positive_btn_prevention"
                        android:textColor="@color/white"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_15dp"
                    android:layout_marginBottom="@dimen/value_10dp"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/diagosis_result_positive_advice"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/value_10dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottie_covid_mask" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottie_covid_hands" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/lottie_social_distancing" />
                    </RelativeLayout>
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/btn_fourth_prevention_others"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/shape_btn_next_white"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="Comment protéger les autres?"
                        android:textColor="@color/white"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>